# agentic_ai

01_uv/explore-uv/: pyproject.toml
01_uv/uv_project2/: main.py  pyproject.toml
03_litellm/01_litellm/my_project/: pyproject.toml
03_litellm/01_litellm/my_project/src/my_project/: hello.py
03_litellm/02_litellm/chatbot/: main.py  pyproject.toml
04_hello_agent/hello_agent/: main.py
04_hello_agent/sync/hello_agent/: pyproject.toml  requirements.txt
05_chainlit/hello_world/: pyproject.toml
06_chatbot/chatbot/: pyproject.toml
07_streming/chatbot_chainlit/: pyproject.toml
