[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sharjeel-ahmed17", email = "sharjeelahmedofficial2@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.70.2",
    "python-dotenv>=1.1.0",
]

[project.scripts]
my-project = "my_project:main"
openai = "my_project.hello:openai"
gemini = "my_project.hello:gemini"
gemini2 = "my_project.hello:gemini2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
